--- a/front/src/app/welcome-page/welcome-page.component.html
+++ b/front/src/app/welcome-page/welcome-page.component.html
@@ -10,7 +10,7 @@
             <mat-icon>people</mat-icon>
             <p>Creer une salle de vote</p>
         </a>
-        <a mat-raised-button class="menu-button" color="primary">
+        <a mat-raised-button routerLink="/join" class="menu-button" color="primary">
             <mat-icon>how_to_vote</mat-icon>
             <p>Rejoindre un vote</p>
         </a>
