--- a/front/src/app/welcome-page/welcome-page.component.html
+++ b/front/src/app/welcome-page/welcome-page.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="menu-container">
 
-        <a mat-raised-button class="menu-button" color="primary">
+        <a mat-raised-button routerLink="/create" class="menu-button" color="primary">
             <mat-icon>people</mat-icon>
             <p>Creer une salle de vote</p>
         </a>
@@ -14,7 +14,7 @@
             <mat-icon>how_to_vote</mat-icon>
             <p>Rejoindre un vote</p>
         </a>
-        <a mat-raised-button class="menu-button" color="primary">
+        <a mat-raised-button routerLink="/identifyAdmin" class="menu-button" color="primary">
             <mat-icon>poll</mat-icon>
             <p>Administrer un vote</p>
         </a>
