--- a/front/src/app/admin-page/admin-page.component.sass
+++ b/front/src/app/admin-page/admin-page.component.sass
@@ -5,7 +5,9 @@
     width: 100%
     height: 100%
 
-    
+
+//NOTSTARTED    
+
 .notStarted
     display: flex
     justify-content: center
@@ -28,6 +30,37 @@
     width: 50%
     height: 100px
     font-size: 40px
+
+//STARTED//
+.started
+    display: flex
+    justify-content: center
+    width: 90%
+    align-items: center
+    flex-direction: column
+    
+    h3
+        margin:30px
+        padding:20px
+        background-color: #f8672d
+        border-radius: 10px
+        color: white
+
+.voteDesc
+    border: 7px solid #ED6129
+    border-radius: 14px
+    margin: 30px
+    padding: 10px
+    text-align: center
+    width: 50%    
+
+
+
+.next-button
+    width: 50%
+    height: 100px
+    font-size: 40px
+
 
 .page-title
     padding-top: 5%
