--- a/front/src/app/user-page/user-page.component.sass
+++ b/front/src/app/user-page/user-page.component.sass
@@ -1,3 +1,82 @@
+
+.content
+    width: 100%
+
+
+.loading
+    width:100%
+    display: flex
+    justify-content: center
+    align-items: center
+    padding-top: 30px
+    flex-direction: column
+
+    h3
+        text-align: center
+        margin-top: 100px
+        margin-bottom:100px
+
+//STARTED//
+.voting
+    display: flex
+    justify-content: center
+    width: 100%
+    align-items: center
+    flex-direction: column
+    
+    h3
+        font-size: 3vh 
+        margin:10px
+        padding:20px
+        background-color: #f8672d
+        border-radius: 10px
+        color: white
+
+.voteDesc
+    border: 7px solid #ED6129
+    border-radius: 14px
+    padding: 10px
+    text-align: center
+    width: 80%
+    h4
+        font-size: 4vh
+    h5
+        font-size: 3vh 
+ 
+        
+.forAgainst
+    display: flex
+    width: 95%
+    border-radius: 10px
+    text-align: center
+    background-color:#e4e4e4
+    margin-top:10px
+    padding: 1vh
+    div
+        background-color: #f8672d
+        flex:1
+        margin: 0.5vh
+        border-radius: 1vh
+        h4
+            margin:1vh
+            color: white
+            font-size: 3vh
+        input
+            margin:1vh
+            width:50% !important
+            font-size: 5vh
+        .mat-slider-horizontal
+            min-width: unset
+            width: 80%
+
+.valid-button
+    margin: 2vh
+    width: 80%
+    height: 10vh
+    font-size: 5vh
+
+
+
 .page-title
     padding-top: 5%
     padding-bottom: 2%
