start frontfront recapPage

--- a/front/src/app/user-page/user-page.component.html
+++ b/front/src/app/user-page/user-page.component.html
@@ -15,6 +15,7 @@
                 <h4>{{currentVote.title}}</h4>
                 <h5>{{currentVote.description}}</h5>
             </div>
+            <h6>Votes restants :{{remainingVotes}}</h6>
             <div class ="forAgainst">
                 <div>
                     <h4>Pour</h4>
