--- a/front/src/app/user-page/user-page.component.sass
+++ b/front/src/app/user-page/user-page.component.sass
@@ -50,7 +50,6 @@
     border-radius: 10px
     text-align: center
     background-color:#e4e4e4
-    margin-top:10px
     padding: 1vh
     div
         background-color: #f8672d
@@ -69,6 +68,12 @@
             min-width: unset
             width: 80%
 
+h6
+    background-color: #e4e4e4
+    border-radius: 1vh
+    font-size: 4vh
+    margin-top:1vh
+
 .valid-button
     margin: 2vh
     width: 80%
@@ -85,4 +90,4 @@
     align-items: center
 
 .page-title>img
-    width: 120px
+    width: 15vh
