--- a/front/src/custom-theme.scss
+++ b/front/src/custom-theme.scss
@@ -87,7 +87,7 @@ $warn-cfdt: (
 //My typography
 //size,heigh,weight,family,letter-spacing
 $typography-cfdt:mat.define-typography-config(
-  $headline: mat.define-typography-level(60px,0.9em,300),
+  $headline: mat.define-typography-level(7.5vh,0.9em,300),
   $title: mat.define-typography-level(55px,0.9em,500),
   $subheading-2: mat.define-typography-level(45px,0.9em,300),
   $subheading-1: mat.define-typography-level(40px,0.9em,300),
