--- a/front/src/app/admin-page/admin-page.component.sass
+++ b/front/src/app/admin-page/admin-page.component.sass
@@ -14,6 +14,8 @@
     width: 90%
     align-items: center
     flex-direction: column
+    h3
+        font-size: 6vw
 
 .slugQR
     margin-bottom: 50px
