--- a/front/src/app/recap-page/recap-page.component.html
+++ b/front/src/app/recap-page/recap-page.component.html
@@ -5,20 +5,95 @@
         <h1>Vote cfdt</h1>
     </div>
     <div class="content">
-        <div class="titleTab">
-                <h3>
-                    Titre du vote
-                </h3>
-                <h3>
-                    Pour
-                </h3>
-                <h3>
-                    Neutre
-                </h3>
-                <h3>
-                    Contre
-                </h3>
-        </div>
+
+        <h2>fin du vote</h2>
+
+        <table mat-table [dataSource]="poll.votes" multiTemplateDataRows>
+
+            <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef> Titre </th>
+                <td mat-cell *matCellDef="let element"> {{element.title}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="pour">
+                <th mat-header-cell *matHeaderCellDef> Pour </th>
+                <td mat-cell *matCellDef="let element"> {{sumPour(element.participations)}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="contre">
+                <th mat-header-cell *matHeaderCellDef> Contre </th>
+                <td mat-cell *matCellDef="let element"> {{sumNeutre(element.participations)}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="neutre">
+                <th mat-header-cell *matHeaderCellDef> Neutre </th>
+                <td mat-cell *matCellDef="let element"> {{sumContre(element.participations)}} </td>
+            </ng-container>
+            <!-- Expanded button -->
+            <ng-container matColumnDef="expand">
+                <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
+                    <mat-icon *ngIf="expandedElement !== element">keyboard_arrow_down</mat-icon>
+                    <mat-icon *ngIf="expandedElement === element">keyboard_arrow_up</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+
+
+            <!-- Expanded content column  -->
+            <ng-container matColumnDef="voteDetails">
+                <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
+                    <div class="example-element-detail"
+                        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                        <!-- What to show when expanded -->
+
+                        <table mat-table [dataSource]="element.participations" class="tabVotes">
+                            <ng-container matColumnDef="pour">
+                                <th mat-header-cell *matHeaderCellDef> pour </th>
+                                <td mat-cell *matCellDef="let row"> {{row.pour}} </td>
+                            </ng-container>
+        
+                            <ng-container matColumnDef="contre">
+                                <th mat-header-cell *matHeaderCellDef> Contre </th>
+                                <td mat-cell *matCellDef="let row"> {{row.contre}} </td>
+                            </ng-container>
+        
+                            <ng-container matColumnDef="neutre">
+                                <th mat-header-cell *matHeaderCellDef> Neutre </th>
+                                <td mat-cell *matCellDef="let row"> {{row.neutre}} </td>
+                            </ng-container>
+        
+                            <tr mat-header-row *matHeaderRowDef="displayedInColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedInColumns;"></tr>
+                        </table>
+
+
+
+                    </div>
+
+            </ng-container>
+
+
+
+
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+            <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
+                class="example-element-row"
+                [class.example-expanded-row]="expandedElement === element"
+                (click)="expandedElement = expandedElement === element ? null : element">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: ['voteDetails']" class="example-detail-row"></tr>
+        </table>
+
+
+
+
+
+
+<!-- 
         <div *ngFor="let row of poll.votes">
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
@@ -43,13 +118,11 @@
                         <td mat-cell *matCellDef="let element"> {{element.pour}} </td>
                     </ng-container>
 
-                    <!-- Name Column -->
                     <ng-container matColumnDef="contre">
                         <th mat-header-cell *matHeaderCellDef> Contre </th>
                         <td mat-cell *matCellDef="let element"> {{element.contre}} </td>
                     </ng-container>
 
-                    <!-- Name Column -->
                     <ng-container matColumnDef="neutre">
                         <th mat-header-cell *matHeaderCellDef> Neutre </th>
                         <td mat-cell *matCellDef="let element"> {{element.neutre}} </td>
@@ -59,6 +132,6 @@
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
             </mat-expansion-panel>
-        </div>
+        </div> -->
     </div>
 </div>
