--- a/front/src/app/recap-page/recap-page.component.sass
+++ b/front/src/app/recap-page/recap-page.component.sass
@@ -22,6 +22,28 @@ mat-panel-description
     font-size: 3.5vh
     color: black
 
+
+tr.example-detail-row 
+  height: 0
+
+
+tr.example-element-row:not(.example-expanded-row):hover 
+  background: whitesmoke
+
+
+tr.example-element-row:not(.example-expanded-row):active 
+  background: #efefef
+
+
+.example-element-row td 
+  border-bottom-width: 0
+
+
+.example-element-detail 
+  overflow: hidden
+  display: flex
+
+
 .tabVotes
     width: 100%
 
