--- a/front/src/app/identify-user-page/identify-user-page.component.sass
+++ b/front/src/app/identify-user-page/identify-user-page.component.sass
@@ -15,6 +15,24 @@
     flex-direction: column
     text-align: center
 
+form
+    display: flex
+    width: 100%
+    height: 50%
+    align-items: center
+    justify-content: space-evenly
+    vertical-align: bottom
+    flex-direction: column
+    text-align: center
+
+.menu-button
+    display: flex
+    padding: 15px
+    align-items: flex-end
+    justify-content: center
+    vertical-align: bottom
+
+    
 .field
     font-size: 25px
     width: 60vw
