minor bug fixes

--- a/front/src/app/admin-page/admin-page.component.html
+++ b/front/src/app/admin-page/admin-page.component.html
@@ -14,12 +14,11 @@
             </div>
             <button mat-raised-button matTooltip="Si vous souhaitez commencer les votes plus tard, vous pouvez ré-acceder à cette page depuis la page d'accueil avec vos identifiants." (click)="started = true" class="start-button"
                 color="primary">Commencer les votes<mat-icon>info</mat-icon></button>
-            <!-- TODO:mettre une icone d'info en hover pour dire à l'utilisateur qu'il peut quitter la page (ou un truc plus explicite whatever)-->
         </div>
         <div class="started" *ngIf="started">
             <h3>Temps Restant : {{RemainingTimeDate}}</h3>
             <div class="voteDesc">
-                <h4>{{currentVote.title}}</h4>
+                <h4>{{currentVote.title+" "+(currentVoteNumber+1)+"/"+poll.votes.length}} </h4>
                 <h5>{{currentVote.description}}</h5>
             </div>
             <button mat-raised-button [disabled]="voteState!='begin'" (click)="startVote()" class="next-button"
