--- a/front/src/app/identify-user-page/identify-user-page.component.html
+++ b/front/src/app/identify-user-page/identify-user-page.component.html
@@ -7,7 +7,7 @@
 
   <div class="form">
 
-    <h5>Vous avez rejoins la salle de vote {{routeSlug}}</h5><!-- TODO: remplir par le nom de la salle de vote -->
+    <h5>Vous avez rejoins la salle de vote {{routeSlug}}</h5>
     <form [formGroup]="logInForm" (ngSubmit)="identifyUser()">
       <mat-form-field appearance="fill" class="field">
         <mat-label>Identifiez vous</mat-label>
