--- a/front/src/app/recap-page/recap-page.component.html
+++ b/front/src/app/recap-page/recap-page.component.html
@@ -54,7 +54,7 @@
  
                             <ng-container matColumnDef="nameUser">
                                 <th mat-header-cell *matHeaderCellDef> Participant </th>
-                                <td mat-cell *matCellDef="let row"> {{row.pour}} </td>
+                                <td mat-cell *matCellDef="let row"> {{row.nameUser}} </td>
                             </ng-container>
  
                             <ng-container matColumnDef="pour">
